--- a/src/Assignment-3/assignment3.css
+++ b/src/Assignment-3/assignment3.css
@@ -1,7 +1,55 @@
 /* Our CSS file. */
 
 
-.container, .content {
+/* .container, .content {
 width: 100%;
 height: 100%;
+
+
+} */
+
+html{
+    box-sizing: border-box;
+    width:100%;
+    height:100%;
+}
+.three-cont
+{
+    height:50%;
+    width:100%;
+    background-color:#F2F2F2;
+    margin:5px;
+    padding:3%;
+}
+.first 
+{
+    width:100%;
+    display: flex;
+    flex-direction: row;
+
+}
+.btn
+{
+    color:white;
+    background-color: black;
+    padding:10px 10px;
+    border-radius: 2px;
+  
+}
+.second
+{
+    text-align: center;
+}
+
+#render-wiki
+{
+    width:100%;
+}
+.content
+{
+    width:50%;
+    height:100%;
+}
+iframe{
+    width:100%;
 }
